--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "easy-pbkdf2": "^0.1.1",
     "express": "~4.12.4",
+    "express-session": "^1.11.3",
+    "express-validator": "^2.17.1",
+    "formidable": "^1.0.17",
+    "fs-extra": "^0.24.0",
+    "i18n": "^0.5.0",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "mysql": "^2.9.0",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.2.1",
+    "static-favicon": "^2.0.0-alpha"
   }
 }
